<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/nintendo_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/N_content_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497"
        app:srcCompat="@drawable/rectangle2" />

    <TextView
        android:id="@+id/nintendo_title"
        android:layout_width="274dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/N_content_desc"
        android:text="@string/N_title"
        android:textColor="@color/headings"
        android:textSize="@dimen/headings"
        app:layout_constraintStart_toStartOf="@+id/nintendo_bg"
        app:layout_constraintTop_toTopOf="@+id/nintendo_bg"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/editNTGameName"
        android:layout_width="@dimen/gamenameW"
        android:layout_height="@dimen/gamenameH"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border"
        android:ems="10"
        android:importantForAutofill="no"
        android:hint="@string/game_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/nintendo_bg"
        app:layout_constraintTop_toBottomOf="@+id/editNTPrice" />

    <EditText
        android:id="@+id/editNTPrice"
        android:layout_width="@dimen/priceW"
        android:layout_height="@dimen/priceH"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/border"
        android:ems="10"
        android:importantForAutofill="no"
        android:hint="@string/price_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/nintendo_bg"
        app:layout_constraintTop_toBottomOf="@+id/nintendo_title" />

    <Button
        android:id="@+id/addNBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="@color/btn_bg"
        android:text="@string/addBtn"
        android:textColor="@color/btn_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/nintendo_bg"
        app:layout_constraintEnd_toEndOf="@+id/nintendo_bg" />

</androidx.constraintlayout.widget.ConstraintLayout>