<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/playStation_bg"
        android:layout_width="308dp"
        android:layout_height="530dp"
        android:contentDescription="@string/PS_content_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497"
        app:srcCompat="@drawable/rectangle" />

    <TextView
        android:id="@+id/playStation_title"
        android:layout_width="274dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/PS_content_desc"
        android:text="@string/PS_title"
        android:textColor="@color/headings"
        android:textSize="@dimen/headings"
        app:layout_constraintStart_toStartOf="@+id/playStation_bg"
        app:layout_constraintTop_toTopOf="@+id/playStation_bg"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/editPSGameName"
        android:layout_width="@dimen/gamenameW"
        android:layout_height="@dimen/gamenameH"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/game_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/playStation_bg"
        app:layout_constraintTop_toBottomOf="@+id/editPSPrice"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editPSPrice"
        android:layout_width="@dimen/priceW"
        android:layout_height="@dimen/priceH"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/price_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/playStation_bg"
        app:layout_constraintTop_toBottomOf="@+id/playStation_title"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/addPSBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="52dp"
        android:text="@string/addBtn"
        android:textStyle="bold"
        android:textColor="@color/btn_text"
        android:background="@color/btn_bg"
        app:layout_constraintBottom_toBottomOf="@+id/playStation_bg"
        app:layout_constraintEnd_toEndOf="@+id/playStation_bg" />

</androidx.constraintlayout.widget.ConstraintLayout>