<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/gametracker_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/app_content_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/gametracker_logo" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="@dimen/signup_W"
        android:layout_height="@dimen/signup_H"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gametracker_logo"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="@dimen/signup_W"
        android:layout_height="@dimen/signup_H"
        android:layout_marginStart="51dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextNumberPassword"
        android:layout_width="@dimen/signup_W"
        android:layout_height="@dimen/signup_H"
        android:layout_marginStart="51dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="159dp"
        android:backgroundTint="@color/btn_bg"
        android:text="@string/signupBtn"
        android:textColor="@color/btn_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>