<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/playstationBtn"
        style="@style/AppTheme.ImageButton"
        android:layout_marginTop="40dp"
        android:backgroundTint="#004097"
        android:contentDescription="@string/PS_content_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/playstation_logo" />

    <ImageButton
        android:id="@+id/nintendoBtn"
        style="@style/AppTheme.ImageButton"
        android:layout_marginTop="40dp"
        android:backgroundTint="#E80001"
        android:contentDescription="@string/N_content_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playstationBtn"
        app:srcCompat="@mipmap/nintendo_logo" />

    <ImageButton
        android:id="@+id/xboxBtn"
        style="@style/AppTheme.ImageButton"
        android:layout_marginStart="115dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="121dp"
        android:backgroundTint="#1DA302"
        android:contentDescription="@string/X_content_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nintendoBtn"
        app:layout_constraintVertical_bias="0.142"
        app:srcCompat="@mipmap/xbox_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>