<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGray">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_content_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497"
        app:srcCompat="@drawable/rectangle4" />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/app_content_desc"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@mipmap/gametracker_logo" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="@dimen/login_W"
        android:layout_height="@dimen/login_H"
        android:layout_marginTop="32dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

    <EditText
        android:id="@+id/editTextNumberPassword2"
        android:layout_width="@dimen/login_W"
        android:layout_height="@dimen/login_H"
        android:layout_marginTop="28dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="numberPassword"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/btn_bg"
        android:text="@string/loginBtn"
        android:textColor="@color/btn_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword2" />
</androidx.constraintlayout.widget.ConstraintLayout>